--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="https://github.com/conan-io" target="_blank">
                         <img src="img/git-icon.png" width="22" height="21" />
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://cpplang.now.sh/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" />
                     </a>
             </div>
@@ -218,6 +218,15 @@
             <div class="col testimonial-slider">
                 <div class="testimonial">
                     <div class="testimonial-content">
+                        <div class="testimonial-title">Enterprise Solutions Engineer at Github</div>
+                        <div class="txt-green">Johannes Nicolai</div>
+                        <p class="quote">
+                            "conan.io makes it easier for our many automotive GitHub Enterprise customers doing C and C++ programming to establish a continuous delivery pipeline that actually deserves that name."
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
                         <div class="testimonial-title">Senior Software Engineer at Rheinmetall</div>
                         <div class="txt-green">Ovanes Markarian</div>
                         <p class="quote">
@@ -232,29 +241,19 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        <div class="testimonial-title">Senior Software Engineer at Rheinmetall</div>
-                        <div class="txt-green">Ovanes Markarian</div>
+                        <div class="testimonial-title">Sr Devops Lead Engineer at Mercedes-Benz R&D</div>
+                        <div class="txt-green">Siva Mandadi</div>
                         <p class="quote">
-                            "With Conan it was a miracle to seamlessly manage C++
-                            dependencies between Linux and Mac OS X. Whenever a new
-                            compiler was used Conan easily recompiled all third party libraries.
-                            Updating to the newer versions of the libraries become now so
-                            much easier and also very reproducible and automated as well.
-                            Thanks for such a great project and keep up improving it! "
+                            "Conan has amplified our productivity, by minimizing the build times and implement full fled CI features for our C/C++ development. Its the true dependency manager for C/C++"
                         </p>
                     </div>
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        <div class="testimonial-title">Senior Software Engineer at Rheinmetall</div>
-                        <div class="txt-green">Ovanes Markarian</div>
+                        <div class="testimonial-title">IT Manager at Melexis</div>
+                        <div class="txt-green">Peter Tillemans</div>
                         <p class="quote">
-                            "With Conan it was a miracle to seamlessly manage C++
-                            dependencies between Linux and Mac OS X. Whenever a new
-                            compiler was used Conan easily recompiled all third party libraries.
-                            Updating to the newer versions of the libraries become now so
-                            much easier and also very reproducible and automated as well.
-                            Thanks for such a great project and keep up improving it! "
+                            "Conan brings C++ development and dependency management into the 21st century and on par with the other development eco-systems. We are currently designing this in to streamline the development of test programs for our products to help facilitate reuse and help our distributed teams develop the robust and efficient tests to guarantee the quality of our innovative products."
                         </p>
                     </div>
                 </div>
@@ -336,7 +335,7 @@
                     <li><a href="https://github.com/conan-io">GitHub</a></li>
                     <li><a href="https://twitter.com/conan_io">Twitter</a></li>
                     <li><a href="https://facebook.com/conan.io">Facebook</a></li>
-                    <li><a href="slack#conan">Slack #conan</a></li>
+                    <li><a href="https://cpplang.now.sh/">Slack #conan</a></li>
                 </ul>
             </div>
         </div>
