--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -37,7 +37,7 @@
                     <a href="https://github.com/conan-io" target="_blank">
                         <img src="img/git-icon.png" width="22" height="21" />
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="https://cpplang.now.sh/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" />
                     </a>
                 </div>
@@ -120,7 +120,7 @@ The look and feel of the Service is copyright ©2015 Conan. All rights reserved.
                     <li><a href="https://github.com/conan-io">GitHub</a></li>
                     <li><a href="https://twitter.com/conan_io">Twitter</a></li>
                     <li><a href="https://facebook.com/conan.io">Facebook</a></li>
-                    <li><a href="slack#conan">Slack #conan</a></li>
+                    <li><a href="https://cpplang.now.sh/">Slack #conan</a></li>
                 </ul>
             </div>
         </div>
