--- a/index.html
+++ b/index.html
@@ -257,6 +257,63 @@
                         </p>
                     </div>
                 </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="testimonial-title">DevOps Lead at Arxan Technologies</div>
+                        <div class="txt-green">Derian Reus</div>
+                        <p class="quote">
+                            "Conan helped us with our infrastructure overhaul by reducing our full build time by over 40 minutes. That has saved us both Developer time and reduced our AWS bill."
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="testimonial-title">Manager of AppAnywhere Technology Strategy</div>
+                        <div class="txt-green">Gerald R. Wiltse</div>
+                        <p class="quote">
+                            "Conan.io arrived just in time to enable us to test multiple networking, logging, and cryptography libraries simply by adding lines to a text file.  Moreover, when we did decide to master a library, we invested our time into a single cross-platform package, so our developers didn't need to build and rebuild the library on their own. It's revolutionized how we do rapid prototyping."
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="testimonial-title">C++ Software Developer at Khom</div>
+                        <div class="txt-green">Uilian Ries</div>
+                        <p class="quote">
+                            "Conan is the best solution for external dependencies in C/C++ projects.
+                            It linked C++ and DevOps by applying a common language for building, packaging, and distributing our artifacts to any platform and architecture."
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="testimonial-title">Owner & Lead Software Engineer @ imageflow</div>
+                        <div class="txt-green">Nathanael Jones</div>
+                        <p class="quote">
+                            "Conan has been a lifesaver in managing cross-platform packages for Imageflow.
+                            It's flexible, addresses the hard problems of C/C++ package management head-on, and is backed by a fantastic set of developers.
+                            Don't waste your time with alternatives; this is the real deal."
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="testimonial-title">R&D Engineer @ Tanker</div>
+                        <div class="txt-green">Theo Delrieu</div>
+                        <p class="quote">
+                            "I'll simply say that I was a total n00b in build systems before, dreading to update dependencies. Conan made it easy and likeable, I'm now really interested in packaging... Weird for a C++ programmer!"
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="testimonial-title">Boost.Build and Boost.Predef author and lead programmer at Disbelief LLC</div>
+                        <div class="txt-green">Rene Rivera</div>
+                        <p class="quote">
+                            "Conan’s flexibility made it possible to do something that was thought intractable; to make a modular Boost C++ Libraries distribution."
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
