Adding Company Logos

--- a/index.html
+++ b/index.html
@@ -89,16 +89,37 @@
         <div class="row">
             <div class="col our-users-slider">
                 <div class="user-box bg-light">
-                    <img src="img/huawei-logo.png" width="89" height="85" alt="">
+                    <img src="img/huawei-logo.png" width="89" height="85" alt="Huawei Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/melexis-logo.png" width="115" height="85" alt="">
+                    <img src="img/melexis-logo.png" width="115" height="85" alt="Melexis Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/mercedes-logo.png" width="115" height="85"  alt="">
+                    <img src="img/mercedes-logo.png" width="115" height="85"  alt="Mercedes-Benz Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/khomp-logo.png" width="115" height="85" alt="">
+                    <img src="img/appanywhere-logo.png" width="85" height="85" alt="AppAnywhere Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/khomp-logo.png" width="115" height="85" alt="Khomp Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/arxan-logo.png" width="84" height="85" alt="Arxan Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/rheinmetall-logo.png" width="165" height="85" alt="Rheinmetall Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/bitprim-logo.png" width="129" height="85" alt="Bitprim Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/plex-tv-logo.png" width="116" height="85" alt="Plex Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/pix4d-logo.png" width="85" height="85" alt="Pix4D Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/poco-libraries-logo.png" width="150" height="85" alt="Poco C++ Libraries Logo">
                 </div>
             </div>
         </div>
