--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 <header class="conan-header bgc-blue">
     <div class="container header-container">
         <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand" href="#"><img src="img/logo-conan.jpg" width="356" height="57" class="d-inline-block align-top img-fluid" alt="Conan"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo-conan.jpg" width="356" height="57" class="d-inline-block align-top img-fluid" alt="Conan"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link nav-download" href="downloads">Download</a>
+                    <a class="nav-item nav-link nav-download" href="downloads.html">Download</a>
                     <a class="nav-item nav-link" href="http://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="http://blog.conan.io/" target="_blank">Blog</a>
                 </div>
@@ -53,6 +53,7 @@
                     <a href="https://cpplang.now.sh/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" />
                     </a>
+                </div>
             </div>
         </nav>
     </div>
@@ -69,13 +70,13 @@
         </div>
         <div class="row">
             <div class="col text-center">
-                <a class="button button-download bgc-dark-blue" href="#">Download <span class="dl-version">1.0</span></a>
+                <a class="button button-download bgc-dark-blue" href="downloads.html">Download <span class="dl-version">1.0</span></a>
                     <a class="button button-get-started bgc-green" href="#">Get started</a>
             </div>
         </div>
         <div class="row">
             <div class="col text-center">
-                <a href="https://github.com/conan-io/conan" class="github-link txt-cyan">Go to github</a>
+                <a href="https://github.com/conan-io/conan" class="github-link txt-cyan" target="_blank">Go to github</a>
             </div>
         </div>
     </div>
@@ -310,7 +311,7 @@
             <div class="col-6 col-sm-3 col-xl-2">
                 <ul>
                     <li><span class="txt-green">Get</span></li>
-                    <li><a href="">Download</a></li>
+                    <li><a href="downloads.html">Download</a></li>
                     <li><a href="https://github.com/conan-io/conan">Github</a></li>
                 </ul>
             </div>
