--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -207,7 +207,7 @@
             <div class="col-6 col-sm-3 col-xl-2">
                 <ul>
                     <li><span class="txt-green">Get</span></li>
-                    <li><a href="">Download</a></li>
+                    <li><a href="downloads.html">Download</a></li>
                     <li><a href="https://github.com/conan-io/conan">Github</a></li>
                 </ul>
             </div>
