--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -95,7 +95,7 @@ The look and feel of the Service is copyright ©2015 Conan. All rights reserved.
             <div class="col-6 col-sm-3 col-xl-2">
                 <ul>
                     <li><span class="txt-green">Get</span></li>
-                    <li><a href="">Download</a></li>
+                    <li><a href="downloads.html">Download</a></li>
                     <li><a href="https://github.com/conan-io/conan">Github</a></li>
                 </ul>
             </div>
