--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <img src="img/plex-tv-logo.png" width="116" height="85" alt="Plex Logo">
                 </div>
                 <div class="user-box bg-light">
+                    <img src="img/tanker-logo.png" width="87" height="85" alt="Tanker Logo">
+                </div>
+                <div class="user-box bg-light">
                     <img src="img/pix4d-logo.png" width="85" height="85" alt="Pix4D Logo">
                 </div>
                 <div class="user-box bg-light">
