--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col text-center">
                 <a class="button button-download bgc-dark-blue" href="#">Download <span class="dl-version">1.0</span></a>
-                    <a class="button button-get-started bgc-green" href="#">Get started</a>
+                    <a class="button button-get-started bgc-green" href="http://docs.conan.io/en/latest/introduction.html">Get started</a>
             </div>
         </div>
         <div class="row">
