minor changes for release

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         <div class="row">
             <div class="col our-users-slider">
                 <div class="user-box bg-light">
+                    <img src="img/pix4d-logo.png" width="85" height="85" alt="Pix4D Logo">
+                </div>
+                <div class="user-box bg-light">
                     <img src="img/huawei-logo.png" width="89" height="85" alt="Huawei Logo">
                 </div>
                 <div class="user-box bg-light">
@@ -96,12 +99,12 @@
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/mercedes-logo.png" width="115" height="85"  alt="Mercedes-Benz Logo">
-                </div>
-                <div class="user-box bg-light">
-                    <img src="img/appanywhere-logo.png" width="85" height="85" alt="AppAnywhere Logo">
-                </div>
+                </div>       
                 <div class="user-box bg-light">
                     <img src="img/khomp-logo.png" width="115" height="85" alt="Khomp Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/plex-tv-logo.png" width="116" height="85" alt="Plex Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/arxan-logo.png" width="84" height="85" alt="Arxan Logo">
@@ -113,13 +116,10 @@
                     <img src="img/bitprim-logo.png" width="129" height="85" alt="Bitprim Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/plex-tv-logo.png" width="116" height="85" alt="Plex Logo">
-                </div>
-                <div class="user-box bg-light">
                     <img src="img/tanker-logo.png" width="87" height="85" alt="Tanker Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/pix4d-logo.png" width="85" height="85" alt="Pix4D Logo">
+                    <img src="img/appanywhere-logo.png" width="85" height="85" alt="AppAnywhere Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/poco-libraries-logo.png" width="150" height="85" alt="Poco C++ Libraries Logo">
@@ -245,13 +245,13 @@
                         <div class="testimonial-title">Enterprise Solutions Engineer at Github</div>
                         <div class="txt-green">Johannes Nicolai</div>
                         <p class="quote">
-                            "conan.io makes it easier for our many automotive GitHub Enterprise customers doing C and C++ programming to establish a continuous delivery pipeline that actually deserves that name."
+                            "Conan makes it easier for our many automotive GitHub Enterprise customers doing C and C++ programming to establish a continuous delivery pipeline that actually deserves that name."
                         </p>
                     </div>
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        <div class="testimonial-title">Senior Software Engineer at Rheinmetall</div>
+                        <div class="testimonial-title">Senior Software Engineer</div>
                         <div class="txt-green">Ovanes Markarian</div>
                         <p class="quote">
                         "With Conan it was a miracle to seamlessly manage C++
@@ -292,16 +292,32 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        <div class="testimonial-title">Manager of AppAnywhere Technology Strategy</div>
-                        <div class="txt-green">Gerald R. Wiltse</div>
+                        <div class="testimonial-title">C++ Software Developer at Pix4D</div>
+                        <div class="txt-green">Luis Díaz Más</div>
                         <p class="quote">
-                            "Conan.io arrived just in time to enable us to test multiple networking, logging, and cryptography libraries simply by adding lines to a text file.  Moreover, when we did decide to master a library, we invested our time into a single cross-platform package, so our developers didn't need to build and rebuild the library on their own. It's revolutionized how we do rapid prototyping."
+                            At Pix4D, we suffered for years the pain of managing a few dozens of 3rd party dependencies 
+                            with our home-grown tools. Not only developers were feeling that pain, but also the 
+                            CI/CD infrastructure.
+                            We decided to give Conan a try, and it worked! It does not matter how the libraries 
+                            we depend on are built or provided (CMake, autotools, pre-compiled binaries). Conan gives
+                            us the flexibility to manage C/C++ libraries of all kinds.
+                            We have Conan fully integrated in our CI system and we do pretty advanced things with it. It definitely made our life easier.
+
                         </p>
                     </div>
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        <div class="testimonial-title">C++ Software Developer at Khom</div>
+                        <div class="testimonial-title">Manager of AppAnywhere Technology Strategy</div>
+                        <div class="txt-green">Gerald R. Wiltse</div>
+                        <p class="quote">
+                            "Conan arrived just in time to enable us to test multiple networking, logging, and cryptography libraries simply by adding lines to a text file.  Moreover, when we did decide to master a library, we invested our time into a single cross-platform package, so our developers didn't need to build and rebuild the library on their own. It's revolutionized how we do rapid prototyping."
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="testimonial-title">C++ Software Developer at Khomp</div>
                         <div class="txt-green">Uilian Ries</div>
                         <p class="quote">
                             "Conan is the best solution for external dependencies in C/C++ projects.
@@ -311,7 +327,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        <div class="testimonial-title">Owner & Lead Software Engineer @ imageflow</div>
+                        <div class="testimonial-title">Owner & Lead Software Engineer at Imazen</div>
                         <div class="txt-green">Nathanael Jones</div>
                         <p class="quote">
                             "Conan has been a lifesaver in managing cross-platform packages for Imageflow.
@@ -322,7 +338,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        <div class="testimonial-title">R&D Engineer @ Tanker</div>
+                        <div class="testimonial-title">R&D Engineer at Tanker</div>
                         <div class="txt-green">Theo Delrieu</div>
                         <p class="quote">
                             "I'll simply say that I was a total n00b in build systems before, dreading to update dependencies. Conan made it easy and likeable, I'm now really interested in packaging... Weird for a C++ programmer!"
