links in community section

--- a/index.html
+++ b/index.html
@@ -201,18 +201,18 @@
                 Github by an amazing community of contributors and
                 a team of engineers working full time on it. Submit
                 your contributions, feature requests, bug reports and
-                questions to Github issues. The Conan documentation
-                    is open-source as well.</p>
+                questions to <a href="https://github.com/conan-io/conan">Github issues</a>.
+                The Conan documentation is open-source as well.</p>
                 <p>Bintray provides free public hosting for all your open
                 source packages. Create your own Conan repositories
-                in your Bintray OSS account, upload your packages
-                and share them. Conan-Center, is a reviewed/curated
-                central public repository, that’s configured by default
-                    in the Conan client.</p>
+                in your <a href="https://bintray.com/signup/oss">Bintray OSS account</a>, upload your packages
+                and share them. <a href="https://bintray.com/conan/conan-center">Conan-center</a>,
+                is a reviewed/curated central public repository, that’s configured by default
+                in the Conan client.</p>
             </div>
             <div class="col-md-6 col-xl-4">
                 <p>Use any Conan repository in Bintray, such as the
-                Bincrafters repository. It’s managed by a great group of
+                <a href="https://bintray.com/bincrafters/public-conan">Bincrafters repository</a>. It’s managed by a great group of
                 Conan contributors and users who are quickly creating
                 packages for the most popular OSS C and C++ libraries.
                 The conan-transit repository is a read-only snapshot of
@@ -220,7 +220,8 @@
                 conan.io site, that you can use as references for your
                     own recipes.</p>
                 <p>Engage with other Conan users, contributors and
-                maintainers on Twitter and Slack #conan channel.
+                maintainers on <a href="https://bintray.com/bincrafters/public-conan">Twitter</a> and 
+                <a href="https://bintray.com/bincrafters/public-conan">Slack #conan</a> channel.
                 New users, questions and discussions are always
                     welcome!</p>
             </div>
