--- a/index.html
+++ b/index.html
@@ -366,27 +366,27 @@
                 <a href="mailto:info@conan.io" class="txt-cyan">info@conan.io</a>
             </div>
         </div>
-        <form id="conan-contact-us-form">
-        <div class="row cu-form-container">
-            <div class="cu-form-left col-md-6">
-                    <div class="cu-input-div">
-                        <input type="text" placeholder="Name *">
-                    </div>
-                    <div class="cu-input-div">
-                        <input type="email" placeholder="Email *">
-                    </div>
-                    <div class="cu-input-div">
-                        <input type="text" placeholder="Subject">
-                    </div>
-            </div>
-            <div class="cu-form-right col-md-6">
-                <textarea name="" id="" cols="28" rows="5" placeholder="Message *"></textarea>
-            </div>
+        <form id="conan-contact-us-form" method="post" action="//formspree.io/info@conan.io" role="form" novalidate>
+            <div class="row cu-form-container">
+                <div class="cu-form-left col-md-6">
+                        <div class="cu-input-div">
+                            <input type="text" placeholder="Name *">
+                        </div>
+                        <div class="cu-input-div">
+                            <input type="email" placeholder="Email *">
+                        </div>
+                        <div class="cu-input-div">
+                            <input type="text" placeholder="Subject">
+                        </div>
+                </div>
+                <div class="cu-form-right col-md-6">
+                    <textarea name="" id="" cols="28" rows="5" placeholder="Message *"></textarea>
+                </div>
 
-            <div class="text-center cu-form-submit-container col-md-12">
-                <a class="button button-submit bgc-dark-blue">SUBMIT MESSAGE</a>
+                <div class="text-center cu-form-submit-container col-md-12">
+                    <button class="button button-submit bgc-dark-blue">SUBMIT MESSAGE</button>
+                </div>
             </div>
-        </div>
         </form>
         <div class="row subscribe-form-container">
             <div class="col text-center">
