--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link nav-download" href="downloads.html">Download</a>
+                    <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads.html">Download</a>
                     <a class="nav-item nav-link" href="http://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="http://blog.conan.io/" target="_blank">Blog</a>
                 </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="row">
             <div class="col text-center">
-                <a class="button button-download bgc-dark-blue" href="downloads.html">Download <span class="dl-version">1.0</span></a>
+                <a class="button button-download bgc-dark-blue" id="download_btn_middle" href="downloads.html">Download <span class="dl-version">1.0</span></a>
                 <a class="button button-get-started bgc-green" href="http://docs.conan.io/en/latest/introduction.html">Get started</a>
             </div>
         </div>
@@ -406,7 +406,7 @@
             <div class="col-6 col-sm-3 col-xl-2">
                 <ul>
                     <li><span class="txt-green">Get</span></li>
-                    <li><a href="downloads.html">Download</a></li>
+                    <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
                     <li><a href="https://github.com/conan-io/conan">Github</a></li>
                 </ul>
             </div>
