--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -24,7 +24,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link nav-download" href="downloads">Download</a>
+                    <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads">Download</a>
                     <a class="nav-item nav-link" href="http://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="http://blog.conan.io/" target="_blank">Blog</a>
                 </div>
@@ -201,7 +201,7 @@
             <div class="col-6 col-sm-3 col-xl-2">
                 <ul>
                     <li><span class="txt-green">Get</span></li>
-                    <li><a href="downloads.html">Download</a></li>
+                    <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
                     <li><a href="https://github.com/conan-io/conan">Github</a></li>
                 </ul>
             </div>
