--- a/index.html
+++ b/index.html
@@ -375,17 +375,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row cu-form-container">
                 <div class="cu-form-left col-md-6">
                         <div class="cu-input-div">
-                            <input type="text" placeholder="Name *">
+                            <input type="text" name="Name" placeholder="Name *">
                         </div>
                         <div class="cu-input-div">
-                            <input type="email" placeholder="Email *">
+                            <input type="email" name="email" placeholder="Email *">
                         </div>
                         <div class="cu-input-div">
-                            <input type="text" placeholder="Subject">
+                            <input type="text" name="subject" placeholder="Subject">
                         </div>
                 </div>
                 <div class="cu-form-right col-md-6">
-                    <textarea name="" id="" cols="28" rows="5" placeholder="Message *"></textarea>
+                    <textarea name="message" id="" cols="28" rows="5" placeholder="Message *"></textarea>
                 </div>
 
                 <div class="text-center cu-form-submit-container col-md-12">
