--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                 conan.io site, that you can use as references for your
                     own recipes.</p>
                 <p>Engage with other Conan users, contributors and
-                maintainers on <a href="https://bintray.com/bincrafters/public-conan">Twitter</a> and 
-                <a href="https://bintray.com/bincrafters/public-conan">Slack #conan</a> channel.
+                maintainers on <a href="https://twitter.com/conan_io">Twitter</a> and 
+                <a href="https://cpplang.now.sh">Slack #conan</a> channel.
                 New users, questions and discussions are always
                     welcome!</p>
             </div>
