--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="conan-header bgc-blue">
     <div class="container header-container">
         <nav class="navbar navbar-expand-md">
-            <a class="navbar-brand" href="index.html"><img src="img/jfrog_conan_logo.png" width="356" height="57" class="d-inline-block align-top img-fluid" alt="Conan"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/jfrog_conan_logo.png" width="356" class="d-inline-block align-top img-fluid" alt="Conan"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
