--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="user-box bg-light">
                     <img src="img/poco-libraries-logo.png" width="150" height="85" alt="Poco C++ Libraries Logo">
                 </div>
+                <div class="user-box bg-light">
+                    <img src="img/imageflow.png" width="150" height="85" alt="Imageflow Logo">
+                </div>
             </div>
         </div>
         <div class="row">
