--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li>Mature, clean and tested codebase, with strong
                         focus on transparency and adaptation to existing
                         tools with minimal lock-in.
-                        OUR USER'S VOICE
+                        OUR USERS' VOICE
                         Senior Software</li>
 
                 </ul>
