--- a/index.html
+++ b/index.html
@@ -186,9 +186,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         and extend it, even for commercial purposes.</li>
                     <li>Mature, clean and tested codebase, with strong
                         focus on transparency and adaptation to existing
-                        tools with minimal lock-in.
-                        OUR USERS' VOICE
-                        Senior Software</li>
+                        tools with minimal lock-in.</li>
 
                 </ul>
             </div>
@@ -241,7 +239,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container section-content">
         <div class="row">
             <div class="col text-center">
-                <h2>OUR USER'S VOICE</h2>
+                <h2>OUR USERS' VOICE</h2>
             </div>
         </div>
         <div class="row">
