--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/melexis-logo.png" width="115" height="85" alt="Melexis Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/mercedes-logo.png" width="115" height="85"  alt="Mercedes-Benz Logo">
+                    <img src="img/logo/mercedes.png" width="240" height="85"  alt="Mercedes-Benz Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/plex-tv-logo.png" width="116" height="85" alt="Plex Logo">
+                    <img src="img/logo/plex.png" width="144" height="85" alt="Plex Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/arxan-logo.png" width="84" height="85" alt="Arxan Logo">
