--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/arxan-logo.png" width="84" height="85" alt="Arxan Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/rheinmetall-logo.png" width="165" height="85" alt="Rheinmetall Logo">
+                    <img src="img/logo/rheinmetall.png" width="181" height="85" alt="Rheinmetall Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/bitprim-logo.png" width="129" height="85" alt="Bitprim Logo">
