--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/pix4d-logo.png" width="85" height="85" alt="Pix4D Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/huawei-logo.png" width="89" height="85" alt="Huawei Logo">
+                    <img src="img/logo/huawei.png" width="239" height="85" alt="Huawei Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/melexis-logo.png" width="115" height="85" alt="Melexis Logo">
