--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row">
             <div class="col our-users-slider">
                 <div class="user-box bg-light">
-                    <img src="img/pix4d-logo.png" width="85" height="85" alt="Pix4D Logo">
+                    <img src="img/logo/pix4d.png" width="116" height="85" alt="Pix4D Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/logo/huawei.png" width="239" height="85" alt="Huawei Logo">
