--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/huawei-logo.png" width="89" height="85" alt="Huawei Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/melexis-logo.png" width="115" height="85" alt="Melexis Logo">
+                    <img src="img/logo/melexis.png" width="213" height="85" alt="Melexis Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/logo/mercedes.png" width="240" height="85"  alt="Mercedes-Benz Logo">
@@ -109,22 +109,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/plex.png" width="144" height="85" alt="Plex Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/arxan-logo.png" width="84" height="85" alt="Arxan Logo">
+                    <img src="img/logo/arxan.png" width="86" height="85" alt="Arxan Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/rheinmetall-logo.png" width="165" height="85" alt="Rheinmetall Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/bitprim-logo.png" width="129" height="85" alt="Bitprim Logo">
+                    <img src="img/logo/bitprim.png" width="239" height="85" alt="Bitprim Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/tanker-logo.png" width="85" height="85" alt="Tanker Logo">
+                    <img src="img/logo/tanker.png" width="272" height="85" alt="Tanker Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/appanywhere-logo.png" width="122" height="85" alt="AppAnywhere Logo">
+                    <img src="img/logo/khomp.png" width="248" height="85" alt="Tanker Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/poco-libraries-logo.png" width="150" height="85" alt="Poco C++ Libraries Logo">
+                    <img src="img/logo/appanywhere.png" width="164" height="85" alt="AppAnywhere Logo">
+                </div>
+                <div class="user-box bg-light">
+                    <img src="img/logo/poco.png" width="202" height="85" alt="Poco C++ Libraries Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/imageflow.png" width="150" height="85" alt="Imageflow Logo">
