--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="img/facebook-icon.png" width="22" height="21" />
                     </a>
                     <a href="https://github.com/conan-io" target="_blank">
-                        <img src="img/git-icon.png" width="22" height="21" />
+                        <img src="img/github-icon.png" width="22" height="21" />
                     </a>
                     <a href="https://cpplang.now.sh/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" />
