--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/arxan.png" width="86" height="85" alt="Arxan Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/logo/rheinmetall.png" width="214" height="85" alt="Rheinmetall Logo">
+                    <img src="img/logo/rheinmetall.png" width="201" height="85" alt="Rheinmetall Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/logo/bitprim.png" width="239" height="85" alt="Bitprim Logo">
+                    <img src="img/logo/bitprim.png" width="213" height="85" alt="Bitprim Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/logo/tanker.png" width="272" height="85" alt="Tanker Logo">
+                    <img src="img/logo/tanker.png" width="225" height="85" alt="Tanker Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/logo/khomp.png" width="248" height="85" alt="Tanker Logo">
+                    <img src="img/logo/khomp.png" width="219" height="85" alt="Khomp Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/logo/appanywhere.png" width="164" height="85" alt="AppAnywhere Logo">
+                    <img src="img/logo/appanywhere.png" width="139" height="85" alt="AppAnywhere Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/logo/poco.png" width="202" height="85" alt="Poco C++ Libraries Logo">
+                    <img src="img/logo/poco.png" width="181" height="85" alt="Poco C++ Libraries Logo">
                 </div>
                 <div class="user-box bg-light">
                     <img src="img/imageflow.png" width="150" height="85" alt="Imageflow Logo">
