--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/poco.png" width="181" height="85" alt="Poco C++ Libraries Logo">
                 </div>
                 <div class="user-box bg-light">
-                    <img src="img/imageflow.png" width="150" height="85" alt="Imageflow Logo">
+                    <img src="img/logo/imageflow.png" width="150" height="85" alt="Imageflow Logo">
                 </div>
             </div>
         </div>
