Styles Update (including responsive fix)

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a class="button button-get-started bgc-green" href="http://docs.conan.io/en/latest/introduction.html">Get started</a>
             </div>
         </div>
-        <div class="row">
+        <div class="row hero-gitbub-row">
             <div class="col text-center">
                 <a href="https://github.com/conan-io/conan" class="github-link txt-cyan" target="_blank">Go to github</a>
             </div>
