Small fixes by jonico

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="row hero-gitbub-row">
             <div class="col text-center">
-                <a href="https://github.com/conan-io/conan" class="github-link txt-cyan" target="_blank">Go to github</a>
+                <a href="https://github.com/conan-io/conan" class="github-link txt-cyan" target="_blank">Go to GitHub</a>
             </div>
         </div>
     </div>
@@ -180,9 +180,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-md-4 bgc-grey-light pt-4">
                 <h3 class="txt-green">Control</h3>
                 <ul class="txt-grey">
-                    <li>Decentralized client-servers system:
-                        run your own open source conan-server or
-                        JFrog Artifactory on-premise to fully own your
+                    <li>Decentralized client-server system:
+                        Run your own open source conan-server or
+                        JFrog Artifactory on-prem to fully own your
                         packages and binaries.</li>
                     <li>Conan is a Free Open Source Software with the
                         permissive MIT license. Use, modify, redistribute,
@@ -206,10 +206,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row justify-content-center">
             <div class="col-md-6 col-xl-4">
                 <p>Conan is an open source project, actively developed in
-                Github by an amazing community of contributors and
+                GitHub by an amazing community of contributors and
                 a team of engineers working full time on it. Submit
                 your contributions, feature requests, bug reports and
-                questions to <a href="https://github.com/conan-io/conan">Github issues</a>.
+                questions to <a href="https://github.com/conan-io/conan">GitHub issues</a>.
                 The Conan documentation is open-source as well.</p>
                 <p>Bintray provides free public hosting for all your open
                 source packages. Create your own Conan repositories
@@ -415,7 +415,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ul>
                     <li><span class="txt-green">Get</span></li>
                     <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
-                    <li><a href="https://github.com/conan-io/conan">Github</a></li>
+                    <li><a href="https://github.com/conan-io/conan">GitHub</a></li>
                 </ul>
             </div>
             <div class="col-6 col-sm-3 col-xl-2">
