--- a/downloads.html
+++ b/downloads.html
@@ -146,7 +146,7 @@
                 <ul>
                     <li><span class="txt-green">Get</span></li>
                     <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
-                    <li><a href="https://github.com/conan-io/conan">Github</a></li>
+                    <li><a href="https://github.com/conan-io/conan">GitHub</a></li>
                 </ul>
             </div>
             <div class="col-6 col-sm-3 col-xl-2">
