--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -41,6 +41,7 @@
                         <img src="img/slack-icon.png" width="22" height="21" />
                     </a>
                 </div>
+            </div>
         </nav>
     </div>
 </header>
@@ -97,7 +98,7 @@ The look and feel of the Service is copyright ©2015 Conan. All rights reserved.
                 <ul>
                     <li><span class="txt-green">Get</span></li>
                     <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
-                    <li><a href="https://github.com/conan-io/conan">Github</a></li>
+                    <li><a href="https://github.com/conan-io/conan">GitHub</a></li>
                 </ul>
             </div>
             <div class="col-6 col-sm-3 col-xl-2">
