--- a/downloads.html
+++ b/downloads.html
@@ -65,7 +65,7 @@
 <section id="downloads">
     <div class="container section-content">
         <div class="row justify-content-center">
-            <h1 class="txt-grey">Downloads: Version 1.0.0-beta5</h1>
+            <h1 class="txt-grey">Downloads: Version 1.0.0</h1>
         </div>
     </div>
     <div class="container text-center">
@@ -103,9 +103,9 @@
             </div>
 
             <div class="boxed-content col-lg-2"><a
-                    ng-href="https://github.com/conan-io/conan/releases/download/1.0.0-beta.5/conan-ubuntu-64_1_0_0-beta_5.deb"
+                    ng-href="https://github.com/conan-io/conan/releases/download/1.0.0/conan-ubuntu-64_1_0_0.deb"
                     analytics-on="" data-action="download_installer" data-os="ubuntu" analytics-event="ubuntu" analytics-category="download_installer"
-                    href="https://github.com/conan-io/conan/releases/download/1.0.0-beta.5/conan-ubuntu-64_1_0_0-beta_5.deb">
+                    href="https://github.com/conan-io/conan/releases/download/1.0.0/conan-ubuntu-64_1_0_0.deb">
                 <div class="boxed-content"><i class="fa fa-linux"></i>
                     <h2 class="boxed-content-title mt-4">Ubuntu/Debian x64 installer</h2>
                     <p>Download</p></div>
@@ -113,10 +113,10 @@
             <div class="boxed-content col-lg-2">
                 <div class="boxed-content"><i class="fa fa-windows"></i>
                     <h2 class="boxed-content-title mt-4">Windows installer</h2>
-                    <p><a href="https://github.com/conan-io/conan/releases/download/1.0.0-beta.5/conan-win-32_1_0_0-beta_5.exe"
+                    <p><a href="https://github.com/conan-io/conan/releases/download/1.0.0/conan-win-32_1_0_0.exe"
                     analytics-on="" analytics-event="windows" data-action="download_installer" data-os="windows"
                     analytics-category="download_installer">Download x86_64</a></p>
-                    <p><a href="https://github.com/conan-io/conan/releases/download/1.0.0-beta.5/conan-win-64_1_0_0-beta_5.exe"
+                    <p><a href="https://github.com/conan-io/conan/releases/download/1.0.0/conan-win-64_1_0_0.exe"
                     analytics-on="" analytics-event="windows" data-action="download_installer" data-os="windows"
                     analytics-category="download_installer">Download x86</a></p>
                 </div>
