--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col testimonial-slider">
                 <div class="testimonial">
                     <div class="testimonial-content">
-                        <div class="testimonial-title">Enterprise Solutions Engineer at Github</div>
+                        <div class="testimonial-title">Enterprise Solutions Engineer at GitHub</div>
                         <div class="txt-green">Johannes Nicolai</div>
                         <p class="quote">
                             "Conan makes it easier for our many automotive GitHub Enterprise customers doing C and C++ programming to establish a continuous delivery pipeline that actually deserves that name."
