--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -35,7 +35,7 @@
                         <img src="img/facebook-icon.png" width="22" height="21" />
                     </a>
                     <a href="https://github.com/conan-io" target="_blank">
-                        <img src="img/git-icon.png" width="22" height="21" />
+                        <img src="img/github-icon.png" width="22" height="21" />
                     </a>
                     <a href="https://cpplang.now.sh/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" />
